force-app/main/default/objects/Invoice_Accuracy_Metric__c/Invoice_Accuracy_Metric__c.object-meta.xml
<CustomObject>
    <label>Invoice Accuracy Metric</label>
    <nameField>
        <label>Invoice Accuracy Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Accuracy Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>