force-app/main/default/objects/Invoice_Accuracy_Metric__c/fields/Invoice_Source__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Source__c</fullName>
    <label>Invoice Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>