force-app/main/default/objects/Invoice_Accuracy_Metric__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>