force-app/main/default/objects/Invoice_Accuracy_Metric__c/fields/Total_Invoice_Value_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Value_Local__c</fullName>
    <label>Total Invoice Value (Local)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>