force-app/main/default/objects/Invoice_Accuracy_Metric__c/fields/Unique_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_id__c</fullName>
    <externalId>true</externalId>
    <label>Unique id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>